fixed breadcrumbs and product card layout issues

--- a/theme/scss/site/plugins/woocommerce/base.scss
+++ b/theme/scss/site/plugins/woocommerce/base.scss
@@ -10,6 +10,16 @@ main.wc-main.alignwide, *[class^='wc-block'].alignwide {
 	clear: both;
 }
 
+// stop breadcrumbs overflowing page (breadcrumbs uses alignwide)
+main.wp-block-group.wp-block-group-is-layout-constrained {
+	.woocommerce.wp-block-breadcrumbs.wc-block-breadcrumbs {
+		width: 100%;
+		margin-left: 0px;
+		margin-right: 0px;
+		right: 0 !important;
+	}
+}
+
 /* products page */
 
 ul.wc-block-product-template li.wc-block-product, ul.wc-block-grid__products li.wc-block-grid__product {
@@ -28,6 +38,10 @@ ul.wc-block-grid__products {
 		max-width: calc(100% - 50px) !important;
 		margin-bottom: 10px;
 	}
+}
+
+.wc-block-grid__product {
+	border-top: 8px solid transparent;
 }
 
 /* categories */
